--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ th,td{padding:8px;border-bottom:1px solid rgba(255,255,255,0.03);text-align:left
 <body>
 <div class="container">
 <header>
-<h1>Painel de Acompanhamento</h1>
-<div class="muted">Calcula ganhos considerando o valor da ficha e atualiza dinamicamente ao mudar número de apostas ou tipo de aposta.</div>
+<h1>Painel Gestão K8 SOW</h1>
+<div class="muted">Planilha K8 SHOW de gerenciamento. Meta e Foco.</div>
 </header>
 
 <div class="card">
@@ -80,7 +80,7 @@ th,td{padding:8px;border-bottom:1px solid rgba(255,255,255,0.03);text-align:left
 <table id="historyTable"><thead><tr><th>#</th><th>Tipo</th><th>Stake (R$)</th><th>Resultado</th><th>Saldo após</th><th>Hora</th></tr></thead><tbody></tbody></table>
 </div>
 </div>
-<footer style="margin-top:12px;text-align:center;color:var(--muted)">Use em modo demo antes de arriscar dinheiro real. Mantenha disciplina e limites.</footer>
+<footer style="margin-top:12px;text-align:center;color:var(--muted)">Se tu não sabe parar porra, isso ñ é pra tu. Mantenha disciplina e limites.</footer>
 
 <script>
 document.addEventListener('DOMContentLoaded',()=>{
@@ -210,3 +210,4 @@ loadCfg(); loadSession();
 </script>
 </body>
 </html>
+
